# ComfyUI_RvTools

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
Readme/: Checkpoint_Loaders.md  Model_Repos_Reference.md  Nunchaku_Installation.md  README.md  Save_Images.md  Smart_Language_Model_Loader_Guide.md  Smart_Loaders.md  Smart_Prompt.md  Wildcard_Processor.md
core/: __init__.py  common.py  config.py  florence2_wrapper.py  gguf_wrapper.py  keys.py  nunchaku_wrapper.py  qwenvl_base.py  server_endpoints.py  smartlm_base.py  smartlm_files.py  smartlm_florence2.py  smartlm_llm.py  smartlm_qwenvl.py  wildcard_engine.py
js/: eclipse-any-dualswitch-purge.js  eclipse-any-dualswitch.js  eclipse-any-passer-purge.js  eclipse-any-passer.js  eclipse-any-type-handler.js  eclipse-canvas-utils.js  eclipse-conversion-nodes.js  eclipse-detection-to-bboxes.js  eclipse-dynamic-inputs.js  eclipse-lora-stack.js  eclipse-seed.js  eclipse-show-any.js  eclipse-smart-folder.js  eclipse-smart-loader-basic.js  eclipse-smart-loader-lm-advanced.js  eclipse-smart-loader-lm.js  eclipse-smart-loader-plus.js  eclipse-smart-loader.js  eclipse-smart-prompt.js  eclipse-stop.js  eclipse-ui-enhancements.js  eclipse-vram.js  eclipse-wildcard-processor.js  rvtools-any-dualswitch-purge.js  rvtools-any-dualswitch.js  rvtools-any-passer-purge.js  rvtools-any-passer.js  rvtools-any-type-handler.js  rvtools-canvas-utils.js  rvtools-conversion-nodes.js  rvtools-dynamic-inputs.js  rvtools-lora-stack.js  rvtools-seed.js  rvtools-show-any.js  rvtools-smart-folder.js  rvtools-smart-loader-plus.js  rvtools-smart-loader.js  rvtools-smart-prompt.js  rvtools-stop.js  rvtools-ui-enhancements.js  (+2 more)
js/comfy/: index.js
json/loader_templates/: Chroma.json  Flux_Cyberrealistic.json  Flux_Dev.json  Flux_Kontext.json  Flux_Kreamania.json  Flux_MagicPurism.json  Fluxmania_Nunchaku_Flux.json  GGUF_FluxCapacityNSFW.json  Nunchaku_FluxDev.json  Nunchaku_Flux_Kontext.json  Nunchaku_Fluxmania_Legacy.json  Nunchaku_Qwen.json  Nunchaku_Qwen_Image.json  Nunchaku_Qwen_Image_Edit.json  Nunchaku_Qwen_Image_Edit_Lightning.json  Nunchaku_Qwen_Image_Lightning.json  PDXL_Cyberrealistic.json  Pony_Cyberrealistic.json  Qwen_Image.json  (+11 more)
py/: RvConversion_ConcatMulti.py  RvConversion_ConvertPrimitive.py  RvConversion_ConvertToBatch.py  RvConversion_ConvertToList.py  RvConversion_DetectionToBboxes.py  RvConversion_ImageConvert.py  RvConversion_Join.py  RvConversion_LoraStackToString.py  RvConversion_MergeStrings.py  RvConversion_StringFromList.py  RvConversion_WidgetToString.py  RvFolder_AddFolder.py  RvFolder_FilenamePrefix.py  RvFolder_SmartFolder.py  RvImage_AddWatermarkImage.py  RvImage_LoadImage.py  RvImage_LoadImagePath.py  RvImage_LoadImagePath_Pipe.py  RvImage_Preview_Image.py  RvImage_Preview_Mask.py  RvImage_SaveImages.py  RvLoader_Checkpoint_Loader_Small.py  RvLoader_Checkpoint_Loader_Small_Pipe.py  RvLoader_SmartLoader.py  RvLoader_SmartLoader_Basic.py  RvLoader_SmartLoader_LM.py  RvLoader_SmartLoader_Plus.py  RvLogic_Boolean.py  RvLogic_Float.py  RvLogic_Integer.py  RvLogic_Integer_Gen.py  RvLogic_String.py  RvPipe_IO_12CH_Any.py  RvPipe_IO_Context_Image.py  RvPipe_IO_Context_Video.py  RvPipe_IO_Context_WanVideoWrapper.py  RvPipe_IO_Generation_Data.py  RvPipe_IO_Sampler_Settings.py  RvPipe_Out_CheckpointLoader.py  RvPipe_Out_LM_AdvancedOptions.py  (+43 more)
wildcards/: fashion_elements.txt  fashion_lighting.txt  moods.txt
workflow/: Combine_Join_Test.json  Join_Node.json  LoadImage_nodes.json  SmartLoader_Test.json  SmartLoader_Test_2.json  SmartNodes.json  SmartPrompt_Test.json  Smart_LML_Test.json  Smart_LML_Test_Simple.json  conversion_nodes.json  igen2_core.json
(+166 files in other folders)
