[project]
name = "ComfyUI_Eclipse"
description = "ComfyUI custom nodes and utilities for workflow building, type conversions, checkpoint/pipe loaders and file utilities."
version = "1.0.30"
license = {file = "LICENSE"} 

authors = [
	{ name = "r-vage" }
]

keywords = ["ComfyUI","custom_nodes","workflow","conversion","combo","checkpoint loader","pipeline","save_generation_data","Eclipse"]

readme = "README.md"

classifiers = [
  "Operating System :: OS Independent",
  # "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = ["torch", "numpy", "Pillow", "opencv-python", "pilgram", "safetensors", "torchvision", "psutil", "requests", "PyYAML", "aiohttp"]

[project.urls]
Repository = "https://github.com/r-vage/ComfyUI_Eclipse"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/r-vage/ComfyUI_Eclipse/wiki"
"Bug Tracker" = "https://github.com/r-vage/ComfyUI_Eclipse/issues"

[tool.comfy]
PublisherId = "rvage"
DisplayName = "ComfyUI_Eclipse"
Icon = "https://raw.githubusercontent.com/r-vage/ComfyUI_Eclipse/refs/heads/main/Readme/icon_eclipse.png"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

